<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_bg"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/splashScreenBorder"
        android:orientation="vertical"
        android:background="@color/instruction_bg"
        tools:context="com.app.shukdash.Views.Instructions">

        <TextView
            android:id="@+id/txtVWelcomeHeader"
            android:text="@string/instructionsHeading"

            android:layout_marginTop="12dp"
            style="@style/screenHeadlines"
            android:textColor="@color/white"
            />

    <TextView
        android:id="@+id/txtVInstructionsHeader"
        android:text="@string/instructionsHeading"

        android:layout_marginTop="12dp"
        style="@style/screenHeadlines"
        android:textColor="@color/white"
        />


    <LinearLayout
        android:layout_width="800dp"
        android:layout_height="500dp"
        android:layout_marginTop="18dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/instruction_bg_4opacity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/YouWillReceive"
            android:textColor="@color/white"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
             android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/teamPositions"
        android:id="@+id/textView5"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"/>


    <Button
        android:text="@string/startGameBtn"
        android:id="@+id/btnPressStart"
        style="@style/btnPadding"
        android:textColor="@color/white"
        android:background="@drawable/btn2"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"/>
    </LinearLayout>

    </LinearLayout>
    </LinearLayout>
