<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_bg"

   >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   style="@style/splashScreenBorder"
              android:orientation="vertical"
                android:background="@color/deep_red"
    tools:context="com.app.shukdash.Views.PlayerDetails">

    <TextView android:text="@string/EnterTeamName"
        android:layout_marginTop="20dp"
        style="@style/screenHeadlines"
        android:id="@+id/txtVTeamName"
        android:gravity="center_horizontal"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:id="@+id/edTxtTeamName"
        android:minWidth="300dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:inputType="textCapSentences|textAutoCorrect"
        android:imeOptions="actionDone"
        android:layout_marginTop="16dp"
        android:background="@drawable/abc_list_pressed_holo_dark"
        android:textSize="30sp"/>

    <TextView android:text="@string/howMnay"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              style="@style/screenHeadlines"
              android:id="@+id/txtVHowMany"
              android:gravity="center_horizontal"
              android:layout_marginTop="16dp"/>

    <Spinner
        android:layout_width="200dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:id="@+id/spinPlayerNum"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:text="@string/continue1"
        style="@style/btnPadding"
        android:id="@+id/btnTeamName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn1"/>
</LinearLayout>
</LinearLayout>

<!--
<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:id="@+id/LinLRowWoman"
android:layout_marginTop="16dp"
android:layout_gravity="center_horizontal">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imgWoman"
    />

<ImageButton
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imgBtnAddWomen"/>
</LinearLayout>


<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:id="@+id/LinLRowMen"
android:layout_gravity="center_horizontal"
android:layout_marginTop="16dp">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imgMen"/>

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:id="@+id/imgBtnAddMen"/>
</LinearLayout>


<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:id="@+id/LinLRowChildGirl"
android:layout_gravity="center_horizontal"
android:layout_marginTop="16dp">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imgGirl"/>

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:id="@+id/imgBtnAddGirl"/>
</LinearLayout>


<LinearLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:id="@+id/LinLRowBoy"
android:layout_gravity="center_horizontal"
android:layout_marginTop="16dp">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/imgBoy"/>

<ImageButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:id="@+id/imgBtnAddBoy"/>
</LinearLayout>

-->